docs: add Martin Rieser as contributor
Added Martin Rieser to AUTHORS.txt as contributor for:
- Fixed Java Block compilation issues (added proper imports for gecko package)
- Enabled all tests (159 passing, 0 skipped)
- Resolved GeckoRemoteTest failures (fixed API consistency tests)
- Updated documentation for OpenCode CLI
- Used GLM-4.7 LLM model from Z.AI
- update to Java 21

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -3,7 +3,7 @@ AUTHORS AND DEVELOPERS
 
 MAIN DEVELOPERS
 
-Dr. Andreas Müsing <andreas.muesing@gecko-simulations.com>
+Dr. Andreas MÃ¼sing <andreas.muesing@gecko-simulations.com>
 Dr. Andrija Stupar 
 
 CONTRIBUTORS
@@ -12,6 +12,7 @@ Daniel Zimmermann
 Tibor Kereztvalvi
 Josef Ziegler
 Nicholas Eyring
+Martin Rieser - with big help from OpenCode CLI (used GLM-4.7 LLM model from Z.AI)
 
 
 FORMER DEVELOPER AND PROJECT FOUNDER
